# playdate-c-api-experiments

./: .clang-format  .gitignore  .luarc.json  CMakeLists.txt  CMakePresets.json  README.md  _lib3d.md  luaglue.c  luaglue.h  main.c
Source/: icosahedra.lua  knot-ordered.lua  knot.lua  main.lua  pdex.dylib  pdex.elf
build_target/: 3DLibrary_DEVICE.elf  CMakeCache.txt  Makefile  cmake_install.cmake  game.map
mini3d/: 3dmath.c  3dmath.h  mini3d.c  mini3d.h  render.c  render.h  scene.c  scene.h  shape.c  shape.h
